# simple_AD

./: .gitignore  .travis.yml  Makefile.in  README.md  configure.ac
GrAD/: GrAD  Rmath
GrAD/src/: AD.hpp  ADdeclarations.hpp  ADnode.hpp  ADparlist.hpp
GrAD/src/operations/: ADconstant.hpp  ADparameter.hpp
GrAD/src/operations/arithmetic/: ADdiv.hpp  ADprod.hpp  ADsubtract.hpp  ADsum.hpp  ADusubtract.hpp
GrAD/src/operations/binary_math/: ADatan2.hpp  ADpow.hpp
GrAD/src/operations/r_math/: ADgammafn.hpp  ADlgammafn.hpp  ADpsigamma.hpp
compare/: Makefile.in  compare.cpp
compare/cppad/: eigen.cpp  polynomial.cpp  simple.cpp  tmb_paper.cpp
compare/cppad_opt/: eigen.cpp  eigen.dhat  polynomial.cpp  simple.cpp  tmb_paper.cpp
compare/grad/: eigen.cpp  polynomial.cpp  simple.cpp  tmb_paper.cpp
compare/templates/: eigen.hpp  polynomial.hpp  simple.hpp  tmb_paper.hpp
examples/: Makefile.in  eigen.cpp  simple_ADAD.cpp  update.cpp
test/: Makefile.in  suppress.cpp
test/memory/: binary_math.cpp  constructors.cpp  polynomial.cpp  simple.cpp  supmac.supp  tmb_paper.cpp  toParameter.cpp  unary_math.cpp
test/operations_arithmetic/: add.cpp
test/operations_rmath/: gammafn.cpp  lgammafn.cpp  psigamma0.cpp  psigamma1.cpp  psigamma2.cpp
test/operations_unary/: abs.cpp  acos.cpp  acosh.cpp  asin.cpp  asinh.cpp  atan.cpp  atanh.cpp  cos.cpp  cosh.cpp  erf.cpp  exp.cpp  exp2.cpp  expm1.cpp  fabs.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  sign.cpp  sin.cpp  sinh.cpp  sqrt.cpp  tan.cpp  tanh.cpp
test/other/: json.cpp  polynomial.cpp  simple.cpp  tmb_paper.cpp
(+24 files in other folders)
